...
    <string name="operating_system">Operating System</string>
    <string name="device_type">Device Type</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="model_number">Model Number</string>
    <string name="reg_status">Registration Status</string>
    <string name="title_activity_main_result">MainResultActivity</string>
    <string name="seen_with">Subscribers Seen With IMEI</string>
    <string name="paired_imsis">Paired Subscribers</string>
    <string name="no_record">No record found</string>
    <string name="login">Login</string>
    <string name="verify_imei">Verify IMEI</string>
    <string name="length_error">IMEI must be 14 to 16 characters long</string>
    <string name="hexa_error">IMEI must contain A–F, a–f and 0–9 only</string>
...
    <string name="wait">Wait...</string>
    <string name="yes_enable">Yes, enable it!</string>
    <string name="no">No</string>
    <string name="no_internet">No Internet!</string>
    <string name="not_available">N / A</string>
    <string name="imsi">IMSI</string>
    <string name="msisdn">MSISDN</string>
    <string name="last_seen">Last Seen</string>

    <string name="permission_access">Permission Access</string>
    <string name="camera_permission_needed">Camera permission needed for scanner.</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="permission_denied">Permission denied for camera.</string>
...
